examples/errors/circular-include.spcasm
include "circularly-included.spcasm.noerror"
